fix: make the contact section clickable on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ image {
 .items {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .item {
@@ -202,6 +202,9 @@ canvas {
   bottom: 5px;
   left: 5px;
   background-color: black;
-  z-index: 5;
+  z-index: 100;
   padding: 5px;
+  margin: 5px 5px;
+  pointer-events: auto;
+  white-space: nowrap;
 }
